# dune-certik-how3

./: README.md  README_CENTRALIZED_PROCESSOR.md  app.py  centralized_processor.py  certik_api.py  certik_client.py  chainlink_eqs_sample.csv  config.py  data_processor.py  dune_api.py  dune_client.py  dune_processor.py  houseofweb3.io_issues_20250421.csv  houseofweb3.io_mega_export_20250421.csv  houseofweb3.io_pages_20250421(1).csv  houseofweb3.io_pages_structured_data_20250421.csv  improved_eqs_calculator.py  migrate_db.py  models.py  protocol_config.json  protocol_config.py  protocol_tables.json  pyproject.toml  query_builder.py  query_templates.py  replit.nix  routes.py  run_centralized_scoring.py  run_percentile_update.py  run_scoring.py  scheduler.py  score_calculator.py  seed_data.py  test_chainlink_sample.py  test_chainlink_with_adjustments.py  test_dune_api.py  test_eqs_calculator.py  test_eqs_integration.py  update_percentiles.py  utils.py
attached_assets/: earnings_quality.py  eqs-chainlink sampledune.txt  ugs-chainlink flawed.txt
scores/: chainlink_20250408_091038_eqs_data.csv  chainlink_20250408_091038_eqs_data.json  chainlink_20250408_091038_scores.csv  chainlink_20250408_091038_scores.json  chainlink_adjusted_data.csv  chainlink_report.json
static/css/: custom.css
static/js/: charts.js  main.js  table.js
templates/: 404.html  500.html  about.html  categories.html  compare.html  index.html  layout.html  protocol.html  protocol_detail.html  protocols.html
